# Predicting-fire-spread-using-cellular-automata

./: .gitignore  FireModel.py  ForestCell.py  README.md  Run.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: fire_archive_J1V-C2_675226.json  fire_archive_M-C61_675224.json  fire_archive_SV-C2_675228.json  wind_data.json
data/weather_cache/: 50.0973_20.0558_2025-10-20.json  50.0973_20.0558_2025-10-21.json  50.0973_20.0558_2025-10-22.json  50.0973_20.0558_2025-10-23.json  50.0973_20.0558_2025-10-24.json  50.0973_20.0558_2025-10-25.json  61.6245_14.6994_2018-06-05.json  61.6245_14.6994_2018-06-06.json  61.6245_14.6994_2018-06-07.json  61.6245_14.6994_2018-06-08.json  61.6245_14.6994_2018-06-09.json  61.6245_14.6994_2018-06-10.json  61.6245_14.6994_2018-06-11.json  61.6245_14.6994_2018-06-12.json  61.6245_14.6994_2018-06-13.json  61.6245_14.6994_2018-06-14.json  61.6245_14.6994_2018-06-15.json  61.6245_14.6994_2018-06-16.json  61.6245_14.6994_2018-06-17.json  61.6245_14.6994_2018-06-18.json  61.6245_14.6994_2018-06-19.json  61.6245_14.6994_2018-06-20.json  61.6245_14.6994_2018-06-21.json  61.6245_14.6994_2018-06-22.json  61.6245_14.6994_2018-06-23.json  61.6245_14.6994_2018-06-24.json  61.6245_14.6994_2018-06-25.json  61.6245_14.6994_2018-06-26.json  61.6245_14.6994_2018-06-27.json  61.6245_14.6994_2018-06-28.json  61.6245_14.6994_2018-06-29.json  61.6245_14.6994_2018-06-30.json  61.6245_14.6994_2018-07-01.json  61.6245_14.6994_2018-07-02.json  61.6245_14.6994_2018-07-03.json  61.6245_14.6994_2018-07-04.json  61.6245_14.6994_2018-07-05.json  61.6245_14.6994_2018-07-06.json  61.6245_14.6994_2018-07-07.json  61.6245_14.6994_2018-07-08.json  (+27 more)
scripts/: pygame_run.py  run_simulation.py
src/fire_spread/: __init__.py  cell.py  constants.py  constants.py.example  coordinates_transform.py  ignition_processor.py  logging_config.py  model.py  terrain.py  weather.py  wind_provider.py
tests/: __init__.py  conftest.py  test_cell.py  test_model.py  test_validation_metrics.py
validation/: quick_viz_demo.py  quick_viz_real_toa.py  validation_run.py
(+10 files in other folders)
